# Verse

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  ASYNC_COMPLETION_PLAN.md  ASYNC_DB_MIGRATION.md  ASYNC_MIGRATION_COMPLETE.md  ASYNC_MIGRATION_STATUS.md  CHANGELOG.md  CHAT_UX_IMPROVEMENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  Runfile  TEST_MIGRATION_TODO.md  WAKE_LOCK_FEATURE.md  WAKE_LOCK_UI.md  docker-compose.prod.yml  docker-compose.yml  migration_checklist.md  nginx-verse.conf  start.sh
backend/: .env.example  Dockerfile  Dockerfile.migrate  MIGRATIONS.md  USAGE_LIMITS.md  alembic.ini  download_bible.sh  manage_pro_users.py  migrate.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  stamp_initial_migration.py
backend/alembic/: env.py
backend/alembic/versions/: a3f7c2e9_add_last_message_id_to_conversation_summaries.py  d0d22a6e1dc8_initial_schema.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/clients/: ai_client.py  bible_client.py  claude_client.py  embedding_client.py  helloao_client.py  openai_embedding_client.py  sqlite_bible_client.py
backend/app/core/: config.py  database.py  middleware.py  rate_limiter.py  security_headers.py
backend/app/models/: models.py
backend/app/prompts/: __init__.py  base_prompts.py  chat_prompts.py  definition_prompts.py  insight_prompts.py
backend/app/schemas/: translation.py
backend/app/services/: bible_service.py  chat_service.py  definition_service.py  device_link_service.py  insight_service.py  rag_service.py  usage_service.py  user_service.py
backend/migrations/: README.md  add_conversation_summaries.sql  add_device_linking.sql  add_usage_tracking.sql  add_was_truncated_column.sql  backfill_embeddings.py  enable_vector.py  rollback_usage_tracking.sql  run_migration.sh
backend/tests/: conftest.py  test_api.py  test_chat.py  test_definitions.py  test_device_link.py  test_helloao_text_extraction.py  test_insights.py  test_insights.py.bak  test_main.py  test_models.py  test_prompts.py  test_rag_service.py  test_rate_limiting.py  test_security_headers.py  test_sqlite_bible_client.py  test_streaming.py  test_translation_references.py  test_usage_tracking.py  test_user.py
docs/: RAG_QUICK_START.md  (+17 more)
(+113 files in other folders)
