[project]
name = "verse-backend"
version = "0.1.0"
description = "Backend API for Verse - Interactive Bible reader with AI-powered insights"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.1,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pydantic>=2.12.4,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "anthropic>=0.34.0,<1.0.0",
    "httpx>=0.25.1,<1.0.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "slowapi>=0.1.9",
    "pgvector>=0.2.4",
    "openai>=1.0.0",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=7.4.3,<10.0.0",
    "pytest-asyncio>=0.21.1,<2.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.14.7",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
